force-app/main/default/objects/Grocery_Store_Review__c.object
<CustomObject>
    <fields>
        <fullName>Average_Audit_Rating__c</fullName>
        <formula>( Bakery_Rating__c + Bulk_Rating__c + Grocery_Rating__c + Dairy_Rating__c + Deli_Rating__c + End_Displays_Rating__c + Floral_Rating__c + Front_End_Rating__c + Front_Entrance_Rating__c + Frozen_Rating__c + Gluten_Free_Rating__c + Meat_Rating__c + Outside_Rating__c + Pallet_Displays_Rating__c + Produce_Rating__c + Restaurant_Rating__c + Seafood_Rating__c + Side_Panels_Rating__c + Warehouse_Rating__c ) / 19</formula>
        <label>Average Audit Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bakery_Comments__c</fullName>
        <label>Bakery Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Bakery_Rating__c</fullName>
        <label>Bakery Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bulk_Comments__c</fullName>
        <label>Bulk Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Bulk_Rating__c</fullName>
        <label>Bulk Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dairy_Comments__c</fullName>
        <label>Dairy Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Dairy_Rating__c</fullName>
        <label>Dairy Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <formula>DATEVALUE( Start_Time__c)</formula>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deli_Comments__c</fullName>
        <label>Deli Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Deli_Rating__c</fullName>
        <label>Deli Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_of_Audit__c</fullName>
        <formula>(TIMEVALUE( End_Time__c) - TIMEVALUE (Start_Time__c) ) / 60000</formula>
        <label>Duration of Audit (mins)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Displays_Comments__c</fullName>
        <label>End Displays Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>End_Displays_Rating__c</fullName>
        <label>End Displays Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Floral_Comments__c</fullName>
        <label>Floral Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Floral_Rating__c</fullName>
        <label>Floral Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Freight__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Freight Finished</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Front_End_Comments__c</fullName>
        <label>Front End Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Front_End_Rating__c</fullName>
        <label>Front End Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Front_Entrance_Comments__c</fullName>
        <label>Front Entrance Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Front_Entrance_Rating__c</fullName>
        <label>Front Entrance Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Frozen_Comments__c</fullName>
        <label>Frozen Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Frozen_Rating__c</fullName>
        <label>Frozen Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gluten_Free_Comments__c</fullName>
        <label>Gluten Free Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Gluten_Free_Rating__c</fullName>
        <label>Gluten Free Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grocery_Comments__c</fullName>
        <label>Grocery Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Grocery_Rating__c</fullName>
        <label>Grocery Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Janitorial_Comments__c</fullName>
        <label>Janitorial Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Meat_Comments__c</fullName>
        <label>Meat Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Meat_Rating__c</fullName>
        <label>Meat Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outside_Comments__c</fullName>
        <label>Outside Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Outside_Rating__c</fullName>
        <label>Outside Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pallet_Displays_Comments__c</fullName>
        <label>Pallet Displays Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Pallet_Displays_Rating__c</fullName>
        <label>Pallet Displays Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Produce_Comments__c</fullName>
        <label>Produce Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Produce_Rating__c</fullName>
        <label>Produce Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Day_Sales__c</fullName>
        <label>Projected Day Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Restaurant_Comments__c</fullName>
        <label>Restaurant Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Restaurant_Rating__c</fullName>
        <label>Restaurant Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rolling_Sales_Per_Hour__c</fullName>
        <label>Rolling Sales Per Hour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Seafood_Comments__c</fullName>
        <label>Seafood Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Seafood_Rating__c</fullName>
        <label>Seafood Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Side_Panels_Comments__c</fullName>
        <label>Side Panels Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Side_Panels_Rating__c</fullName>
        <label>Side Panels Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Store_Faced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Store Faced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Store_Sales_Yesterday__c</fullName>
        <label>Store Sales Yesterday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Store__c</fullName>
        <label>Store</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Stores</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Store_Janitorial_Performance__c</fullName>
        <label>Total Store Janitorial Performance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warehouse_Comments__c</fullName>
        <label>Warehouse Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Warehouse_Rating__c</fullName>
        <label>Warehouse Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week_To_Date__c</fullName>
        <label>+/- Week To Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Grocery Store Review (Example)</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Store__c</columns>
        <columns>Date__c</columns>
        <columns>Average_Audit_Rating__c</columns>
        <columns>Duration_of_Audit__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{0000000}</displayFormat>
        <label>Grocery Store Review Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grocery Store Review</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>